--- a/src/app.css
+++ b/src/app.css
@@ -3,13 +3,14 @@
   padding: 0;
 }
 
-nav{
+header{
   display: flex;
   align-items: center;
   background-color: rgb(43, 43, 43);
-  justify-content: space-around;
   padding-top: 5px;
   padding-bottom: 5px;
+  justify-content: space-around;
+  margin-bottom: 30px;
 }
 
 input{
@@ -26,26 +27,62 @@ button{
 /*header*/
 
 .title_logo{
-  margin-left: 10px;
+  padding-left: 10px;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 30px;
+  font-size: 23px;
   font-weight: bold;
   color: white;
+  margin-right: 15px;
+}
+.search_form{
+  width: 80%;
 }
 .search_input{
-  width: 60rem;
   height: 100%;
+  width: 80%;
   font-size: 26px;
+  
 }
 .search_btn{
   background-color: rgb(55, 55, 55);
-  width: 3rem;
   height: 100%;
+  width: 45px;
   padding-top: 3px;
   padding-bottom: 3px;
 }
 .search_btn img{
   width: 25px;
+}
+
+/*video list*/
+.videoList{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+.itme_list{
+  display: flex;
+  width: 550px;
+  margin-bottom: 30px;
+  border: 1px solid #999;
+  border-radius: 2px;
+}
+
+.item_desc{
+  margin-left: 15px;
+  margin-top: 15px;
+}
+.item_title{
+  font-size: 18px;
+  margin-bottom: 30px;
+}
+.item_date{
+  display: block;
+  margin-bottom: 10px;
+}
+.item_channelName{
+  display: block;
 }
